--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^18.2.17",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-slick": "^0.23.13",
+    "axios": "^1.6.7",
     "babel-plugin-macros": "^3.1.0",
     "classnames": "^2.3.2",
     "cors": "^2.8.5",
