--- a/package.json
+++ b/package.json
@@ -24,11 +24,19 @@
     "@types/react-dom": "^18.2.17",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-slick": "^0.23.13",
+    "@types/react-swipeable-views": "^0.13.5",
     "axios": "^1.6.7",
     "babel-plugin-macros": "^3.1.0",
+    "bcrypt": "^5.1.1",
     "classnames": "^2.3.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "express": "^4.18.3",
+    "express-validator": "^7.0.1",
+    "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.2",
     "lodash.debounce": "^4.0.8",
+    "mongoose": "^8.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
@@ -70,6 +78,7 @@
     ]
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/swiper": "^6.0.0"
   }
 }
